--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,42 @@ body {
     font-weight: 300;
     color: #000000;
 }
+.row {
+    display: flex;
+}
 
+.col-1 {
+    width: 10%;
+}
+.col-2 {
+    width: 20%;
+}
+.col-3 {
+    width: 30%;
+}
+.col-4 {
+    width: 40%;
+}
+.col-5 {
+    width: 50%;
+}
+.col-6 {
+    width: 60%;
+}
+.col-7 {
+    width: 70%;
+}
+.col-8 {
+    width: 80%;
+}
+.col-9 {
+    width: 90%;
+}
+.col-10 {
+    width: 100%;
+}
+
+/* HEADER */
 .header__container {
     font-family: 'Poppins', sans-serif;
     color: #000000;
@@ -57,6 +92,63 @@ body {
 .nav-link:hover {
     color: #808080;
 }
-.row {
+
+
+/* SEARCH BAR */
+
+.search-bar__box {
+    padding: 2rem 3.2rem;
+    justify-content: space-around;
+}
+.logo__box {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.logo__box  img {
+    width: 100%;
+    height: auto;
+    
+}
+.search-form {
+    padding:0 2rem;
+}
+.input-form {
+    background-color: #F2F2F2;
+    padding: 1rem;
+
+}
+.input-form span i {
+    margin:1rem 2rem;
+}
+
+.input-form-text {
+    border: none;
+    background-color: #F2F2F2;
+}
+.input-form-text:focus {
+    outline: none;
+}
+.search-button {
+    background-color: #231f20;
+    color: #ffffff;
+    font-weight: 700;
+    padding: 0.8rem ;
+    cursor: pointer;
+}
+.button__box {  
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    padding: 1.3rem 2.8rem;
+    margin: 0 1rem;
+    background-color: #ffffff;
+    border: none;
+    transition: all .5s;
+    cursor: pointer;
+}
+.button__box:hover {
+    color: #cccccc;
+}
+.button__box-border {
+    border: 1px solid #cccccc;
 }
