--- a/src/App.css
+++ b/src/App.css
@@ -254,3 +254,50 @@ body {
 .copyright a i {
     margin: 0 3px;
 }
+/* Repositories List */
+.RepositoriesItem__box {
+    justify-content: space-between;
+    border-bottom: 0.5px solid #E5E5E5;
+    margin-bottom: 4rem;
+}
+.Repositories__header {
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 2rem;
+}
+.Repositories__header h3 {
+    margin-right: 1.6rem;
+}
+.Repositories__header a {
+    color: #000000;
+
+}
+.Repositories__content {
+    font-weight: 300;
+    margin: 0;
+    padding-bottom: 4px;
+}
+.Repositories__tag {
+    padding-bottom: 4px;
+}
+.Repositories__author {
+    padding: 1rem 0;
+}
+.Repositories__avatar {
+    padding-right: 5px;
+}
+.Repositories__author h3 {
+    padding: 0 5px;
+    font-weight: 600;
+    transition: all .2s;
+}
+.Repositories__author h3:hover {
+    color: #cb3837;
+}
+/*RES LIST LEFT */
+.RepositoriesItem__left {
+    font-size: 1rem;
+}
+.scope__box {
+    align-items: baseline;
+}
